--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,3 +16,13 @@ div ul li {
     list-style: none;
     text-align: left;
 }
+
+button {
+    color: rgb(90, 1, 173);
+    background-color: rgb(252, 242, 255);
+    font-weight: bold;
+    font-size: large;
+    width: 100%;
+    height: 40px;
+    margin: 10px;
+}
