added high scores page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,11 @@ header div {
     font-weight: bold;
 }
 
+header div a {
+    text-decoration: none;
+    color: rgb(0, 13, 128);
+}
+
 .hidden {
     display: none;
 }
